--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -16,7 +16,9 @@
     padding: 40px 5%;
     background-color: var(--bg-about-linear);
 }
-
+a{
+    text-decoration: none;
+}
 .project {
     position: relative;
     border-radius: var(--card-radius);
@@ -35,6 +37,8 @@
     flex-direction: column;
     justify-content: flex-end;
     position: relative;
+    /* border: 2px solid red; 
+    background-color: #ccc; */
 }
 
 .project-main::after {
