--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -7,9 +7,17 @@
             </div>
             <h1>Hey... I'm Abhijeet</h1>
             <h2 id="hero-text-animation">- <span>{{ displayedText }}</span></h2>
-            <button class="download" #downloadButton>
+            <!-- <button class="download" #downloadButton>
                 <a href="assets/images/resume.pdf" target="_blank">Download Resume <i class="fa-regular fa-file"></i></a>
-            </button>
+            </button> -->
+            <button class="download" #downloadButton>
+                <a href="assets/images/resume.pdf" target="_blank">
+                  <span class="download__text">Download Resume</span>
+                  <span class="download__icon">
+                    <i class="fa-regular fa-file"></i>
+                  </span>
+                </a>
+              </button>
 
         </div>
     <!-- </div> -->
