--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 
     <app-navbar></app-navbar>
-    <!-- <div class="container"> -->
+
         <app-hero></app-hero>
-    <!-- </div> -->
         <app-about></app-about>
         <app-projects></app-projects>
+        <app-contact></app-contact>
+        <app-scroll-top></app-scroll-top> 
     
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
