--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <span id="about"></span>
-<div class="title">
+<div class="title about-title">
    <h2>About <span class="spn">Me <i class="fa-regular fa-address-card"></i></span></h2>
 </div>
 
@@ -14,14 +14,6 @@
                     projects like a Swayamsevak and an interactive web browser. I have also completed a
                     20-day JavaScript project challenge, adding various mini-projects to my portfolio. I thrive in
                     collaborative environments, bringing strong leadership and teamwork skills to every project.</p>
-            
-                <!-- <p><strong>Experience:</strong></p>
-                <p><strong>Software Consultant - Ashtekbits Technologies (Dec 2024 - Present)</strong></p>
-                <ul>
-                    <li><i class="fas fa-check-circle"></i> Developed and integrated APIs using NestJS and MySQL.</li>
-                    <li><i class="fas fa-code"></i> Collaborated with the development team to build Angular-based components.</li>
-                    <li><i class="fas fa-database"></i> Working on designing scalable backend solutions and optimizing API performance.</li>
-                </ul>            -->
                 <div class="experience-card">
                     <div class="experience-header">
                         <i class="fas fa-briefcase"></i>
