--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,16 +1,27 @@
 <section id="hero-sec">
-    <!-- <div id="particles-js"> -->
-        <div class="hero-content">
-            <div class="card-container" #cardContainer>
-
-                <a class="card" href="https://www.linkedin.com/in/abhijeet-mohite-768829220/" target="_blank"><img src="assets/images/p3.png" alt="Abhi" loading="lazy"></a>
-            </div>
-            <h1>Hey... I'm Abhijeet</h1>
-            <h2 id="hero-text-animation">- <span>{{ displayedText }}</span></h2>
-            <button class="download" #downloadButton>
-                <a href="assets/images/resume.pdf" target="_blank">Download Resume <i class="fa-regular fa-file"></i></a>
-            </button>
-
-        </div>
-    <!-- </div> -->
+  <div id="hero-particles-js" class="particle-canvas">
+    <ng-particles
+      [id]="'hero-particles'"
+      [options]="particlesOptions"
+      [particlesInit]="particlesInit"
+    ></ng-particles>
+  </div>
+  
+  <div class="hero-content">
+    <div class="card-container" #cardContainer>
+      <a class="card" href="https://www.linkedin.com/in/abhijeet-mohite-768829220/" target="_blank">
+        <img src="assets/images/p3.png" alt="Abhi" loading="lazy" />
+      </a>
+    </div>
+    <h1>Hey... I'm Abhijeet</h1>
+    <h2 id="hero-text-animation">- <span>{{ displayedText }}</span></h2>
+    <button class="download" #downloadButton>
+      <a href="assets/images/resume.pdf" target="_blank">
+        <span class="download__text">Download Resume</span>
+        <span class="download__icon">
+          <i class="fa-regular fa-file"></i>
+        </span>
+      </a>
+    </button>
+  </div>
 </section>
