--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav>
   <div class="logo">
-    <h1>Logo</h1>
+    <!-- <h1>Logo</h1> -->
+    <a href="https://www.linkedin.com/in/abhijeet-mohite-768829220/" target="_blank"><img src="assets/images/logo.png" alt="Logo" loading="lazy"></a>
+
   </div>
 
   <ul [ngStyle]="{'max-height': menuOpen ? '300px' : '0px'}" id="menuList">
