resume-pdf change

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -16,7 +16,7 @@
     <h1>Hey... I'm Abhijeet</h1>
     <h2 id="hero-text-animation">- <span>{{ displayedText }}</span></h2>
     <button class="download" #downloadButton>
-      <a href="assets/images/resume.pdf" target="_blank">
+      <a href="assets/images/Abhijeet_Mohite_Resume.pdf" target="_blank">
         <span class="download__text">Download Resume</span>
         <span class="download__icon">
           <i class="fa-regular fa-file"></i>
