skills-resume update

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -93,6 +93,10 @@
           <i class="fab fa-angular"></i>
           <p>Angular</p>
         </div>
+        <div class="skill" id="skill-ang">
+          <i class="fab fa-react"></i>
+          <p>React</p>
+        </div>
         <div class="skill" id="skill2">
           <i class="fab fa-python"></i>
           <p>Python</p>
