--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -10,13 +10,17 @@
   <div class="hero-content">
     <div class="card-container" #cardContainer>
       <a class="card" href="https://www.linkedin.com/in/abhijeet-mohite-768829220/" target="_blank">
-        <img src="assets/images/p3.png" alt="Abhi" loading="lazy" />
+        <img src="assets/images/abhijeet.png" alt="Abhi" loading="lazy" />
       </a>
     </div>
     <h1>Hey... I'm Abhijeet</h1>
     <h2 id="hero-text-animation">- <span>{{ displayedText }}</span></h2>
+    <p class="hero-tagline">
+      Crafting elegant solutions with Angular, React & NestJS.<br>
+      Building scalable applications that make a difference.
+    </p>
     <button class="download" #downloadButton>
-      <a href="assets/images/Abhijeet_Mohite_Resume.pdf" target="_blank">
+      <a href="assets/images/AbhijeetMohite_2025_Resume.pdf" target="_blank">
         <span class="download__text">Download Resume</span>
         <span class="download__icon">
           <i class="fa-regular fa-file"></i>
